Iterate over items asynchronously from Pager (#2659)
* Iterator over items asynchronously from Pager

For functions that return a `Pager<T>`, callers will iterate over items across all pages asynchronously by default but can get an async iterator (`Stream`) over pages as well.

Resolves #2205

* Update CHANGELOG for PagerResult changes

* Resolve PR feedback

--- a/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["sdk", "azure", "keyvault", "security", "keys"]
 categories = ["api-bindings"]
 
 [dependencies]
+async-trait = { workspace = true }
 azure_core = { workspace = true }
 futures = { workspace = true }
 serde = { workspace = true }
