--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -14,7 +14,7 @@ edition.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-async-lock = { workspace = true }
+async-lock.workspace = true
 async-trait.workspace = true
 bytes.workspace = true
 futures.workspace = true
