--- a/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_secrets/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["sdk", "azure", "keyvault", "security", "secrets"]
 categories = ["api-bindings"]
 
 [dependencies]
+async-trait = { workspace = true }
 azure_core = { workspace = true }
 futures = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
