--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,6 +125,7 @@ zip = { version = "2.6.1", default-features = false, features = ["deflate"] }
 
 [workspace.lints.clippy]
 large_futures = "deny"
+uninlined_format_args = "allow"
 
 [workspace.lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }
