--- a/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_keys/Cargo.toml
@@ -28,6 +28,7 @@ azure_core_test = { workspace = true, features = [
 ] }
 azure_identity.workspace = true
 azure_security_keyvault_test = { path = "../azure_security_keyvault_test" }
+clap.workspace = true
 criterion.workspace = true
 rand.workspace = true
 sha2.workspace = true
@@ -41,4 +42,8 @@ workspace = true
 
 [[bench]]
 name = "benchmarks"
+harness = false
+
+[[bench]]
+name = "perf"
 harness = false
