--- a/sdk/storage/azure_storage_queue/Cargo.toml
+++ b/sdk/storage/azure_storage_queue/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "azure_storage_queue"
 version = "0.1.0"
+description = "Microsoft Azure Queue client library for Rust"
+readme = "README.md"
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
 repository.workspace = true
 rust-version.workspace = true
+homepage = "https://github.com/azure/azure-sdk-for-rust"
+documentation = "https://docs.rs/azure_storage_queue"
+keywords = ["sdk", "azure", "storage", "queue", "queues"]
+categories = ["api-bindings"]
 
 [dependencies]
 azure_core = { workspace = true, features = ["xml"] }
@@ -13,3 +19,12 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 time = { workspace = true }
 typespec_client_core = { workspace = true, features = ["derive"] }
+
+[lints]
+workspace = true
+
+[dev-dependencies]
+azure_core_test.workspace = true
+azure_identity.workspace = true
+futures.workspace = true
+tokio = { workspace = true, features = ["macros"] }
