--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,6 +24,9 @@
 # Catch all for non-code project files and unowned files | folders
 /**                      @heaths @RickWinter @ronniegeraghty @LarryOsterman
 
+# Allow service owners to approve crate version updates, which impact Cargo.lock
+/Cargo.lock
+
 ##################
 # Automation
 ##################
