--- a/sdk/storage/azure_storage_queue/Cargo.toml
+++ b/sdk/storage/azure_storage_queue/Cargo.toml
@@ -15,6 +15,7 @@ categories = ["api-bindings"]
 
 [dependencies]
 azure_core = { workspace = true, features = ["xml"] }
+rand.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
 time = { workspace = true }
