--- a/sdk/storage/azure_storage_queue/Cargo.toml
+++ b/sdk/storage/azure_storage_queue/Cargo.toml
@@ -15,11 +15,13 @@ categories = ["api-bindings"]
 
 [dependencies]
 azure_core = { workspace = true, features = ["xml"] }
+once_cell = "1.21.3"
 rand.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
 time = { workspace = true }
 typespec_client_core = { workspace = true, features = ["derive"] }
+uuid.workspace = true
 
 [lints]
 workspace = true
