--- a/sdk/storage/azure_storage_queue/Cargo.toml
+++ b/sdk/storage/azure_storage_queue/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["api-bindings"]
 [dependencies]
 azure_core = { workspace = true, features = ["xml"] }
 once_cell = "1.21.3"
+quick-xml.workspace = true
 rand.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
