--- a/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
@@ -19,7 +19,6 @@ azure_core = { workspace = true }
 futures = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-time = { workspace = true }
 tokio = { workspace = true }
 typespec_client_core = { workspace = true, features = ["derive"] }
 
@@ -32,6 +31,7 @@ azure_security_keyvault_keys = { path = "../azure_security_keyvault_keys" }
 azure_security_keyvault_test = { path = "../azure_security_keyvault_test" }
 openssl.workspace = true
 rand.workspace = true
+time.workspace = true
 tokio.workspace = true
 
 [build-dependencies]
