--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -27,7 +27,11 @@ sha2 = { workspace = true, optional = true }
 tokio = { workspace = true, optional = true }
 tracing.workspace = true
 typespec = { workspace = true, features = ["http", "json"] }
-typespec_client_core = { workspace = true, features = ["derive", "http", "json"] }
+typespec_client_core = { workspace = true, features = [
+  "derive",
+  "http",
+  "json",
+] }
 
 [build-dependencies]
 rustc_version.workspace = true
@@ -38,7 +42,6 @@ azure_identity.workspace = true
 azure_security_keyvault_secrets.path = "../../keyvault/azure_security_keyvault_secrets"
 criterion.workspace = true
 thiserror.workspace = true
-time.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
 
