--- a/sdk/storage/azure_storage_queue/Cargo.toml
+++ b/sdk/storage/azure_storage_queue/Cargo.toml
@@ -17,10 +17,15 @@ categories = ["api-bindings"]
 azure_core = { workspace = true, features = ["xml"] }
 quick-xml.workspace = true
 rand.workspace = true
+reqwest = { workspace = true, optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 time = { workspace = true }
 typespec_client_core = { workspace = true, features = ["derive"] }
+
+[features]
+default = ["reqwest"]
+reqwest = ["dep:reqwest"]
 
 [lints]
 workspace = true
