--- a/sdk/storage/azure_storage_queue/package.json
+++ b/sdk/storage/azure_storage_queue/package.json
@@ -1,11 +1,17 @@
 {
   "dependencies": {
-    "@azure-tools/typespec-autorest": "^0.56.0",
-    "@azure-tools/typespec-azure-core": "^0.56.0",
+    "@azure-tools/typespec-autorest": "0.57.0",
+    "@azure-tools/typespec-azure-core": "0.57.0",
+    "@azure-tools/typespec-azure-rulesets": "0.57.0",
     "@azure-tools/typespec-rust": "^0.15.0",
-    "@typespec/http": "^1.0.1",
-    "@typespec/openapi": "^1.0.0",
-    "@typespec/rest": "^0.70.0",
-    "@typespec/versioning": "^0.70.0"
-  }
+    "@typespec/http": "1.1.0",
+    "@typespec/openapi": "1.1.0",
+    "@typespec/rest": "0.71.0",
+    "@typespec/versioning": "0.71.0"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
+  "private": true
 }
