--- a/sdk/storage/azure_storage_queue/tspconfig.yaml
+++ b/sdk/storage/azure_storage_queue/tspconfig.yaml
@@ -1,6 +1,9 @@
 emit:
-  - "@azure-tools/typespec-autorest"
   - "@azure-tools/typespec-rust"
+
+linter:
+  extends:
+    - "@azure-tools/typespec-azure-rulesets/data-plane"
 
 options:
   "@azure-tools/typespec-autorest":
@@ -11,4 +14,4 @@ options:
   "@azure-tools/typespec-rust":
     crate-name: "azure_storage_queue"
     crate-version: "0.1.0"
-    output-dir: "{project-root}/rust-output"
+    emitter-output-dir: "{project-root}"
