--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -27,8 +27,11 @@ uuid.workspace = true
 workspace = true
 
 [dev-dependencies]
-azure_core_test.workspace = true
+azure_core_test = { workspace = true, features = [
+  "tracing",
+] }
 azure_identity.workspace = true
 azure_storage_blob_test.path = "../azure_storage_blob_test"
 futures.workspace = true
 tokio = { workspace = true, features = ["macros"] }
+tracing.workspace = true
