--- a/sdk/core/azure_core_tracing_opentelemetry/Cargo.toml
+++ b/sdk/core/azure_core_tracing_opentelemetry/Cargo.toml
@@ -17,6 +17,7 @@ edition.workspace = true
 azure_core.workspace = true
 log.workspace = true
 opentelemetry = { version = "0.30", features = ["trace"] }
+opentelemetry-semantic-conventions = "0.30"
 tracing.workspace = true
 typespec_client_core.workspace = true
 
