PR feedback from Heath and Liudmila

--- a/sdk/core/azure_core_tracing_opentelemetry/Cargo.toml
+++ b/sdk/core/azure_core_tracing_opentelemetry/Cargo.toml
@@ -10,6 +10,7 @@ homepage = "https://github.com/azure/azure-sdk-for-rust"
 documentation = "https://docs.rs/azure_core_tracing_opentelemetry"
 keywords = ["sdk", "azure", "tracing", "opentelemetry", "observability"]
 categories = ["api-bindings", "development-tools::debugging"]
+publish = false
 
 edition.workspace = true
 
