--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
   "sdk/core/azure_core_amqp",
   "sdk/core/azure_core_test",
   "sdk/core/azure_core_test_macros",
+  "sdk/core/azure_core_opentelemetry",
   "sdk/cosmos/azure_data_cosmos",
   "sdk/identity/azure_identity",
   "sdk/eventhubs/azure_messaging_eventhubs",
