cargo publish fix 2

--- a/sdk/core/azure_core_opentelemetry/Cargo.toml
+++ b/sdk/core/azure_core_opentelemetry/Cargo.toml
@@ -17,6 +17,7 @@ edition.workspace = true
 [dependencies]
 azure_core.workspace = true
 opentelemetry = { version = "0.30", features = ["trace"] }
+opentelemetry-http = "0.30.0"
 tracing.workspace = true
 typespec_client_core.workspace = true
 
