--- a/sdk/core/azure_core_opentelemetry/Cargo.toml
+++ b/sdk/core/azure_core_opentelemetry/Cargo.toml
@@ -18,8 +18,11 @@ edition.workspace = true
 azure_core.workspace = true
 opentelemetry = { version = "0.30", features = ["trace"] }
 opentelemetry-http = "0.30.0"
+opentelemetry_sdk = "0.30"
+reqwest.workspace = true
 tracing.workspace = true
 typespec_client_core.workspace = true
+
 
 [dev-dependencies]
 azure_core_test = { workspace = true, features = ["tracing"] }
