--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -1,19 +1,27 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
-
 trigger:
   branches:
     include:
-    - main
-    - hotfix/*
-    - release/*
+      - main
+      - hotfix/*
+      - release/*
   paths:
     include:
-    - sdk/identity/
+      - sdk/identity/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: identity
     Artifacts:
-    - name: azure_identity
-      safeName: AzureIdentity
+      - name: azure_identity
+        safeName: AzureIdentity
+
+    ${{ if endsWith(variables['Build.DefinitionName'], 'weekly') }}:
+      RunLiveTests: true
+      PersistOidcToken: true
+      MatrixConfigs:
+        - Name: managed_identity_matrix
+          GenerateVMJobs: true
+          Path: sdk/identity/azure_identity/managed-identity-matrix.json
+          Selection: sparse
