--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -35,8 +35,9 @@ uuid.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-getrandom.workspace = true
+getrandom = { workspace = true, features = ["wasm_js"] }
 tokio = { workspace = true, features = ["macros", "rt", "time"] }
+gloo-timers.workspace = true
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["fs"] }
