--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,7 @@ fe2o3-amqp-types = { version = "0.14" }
 flate2 = "1.1.0"
 futures = "0.3"
 getrandom = { version = "0.3" }
-gloo-timers = { version = "0.3", features = ["futures"] }
+gloo-timers = { version = "0.3" }
 hmac = { version = "0.12" }
 litemap = "0.7.4"
 log = "0.4"
