--- a/Cargo.toml
+++ b/Cargo.toml
@@ -122,6 +122,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3"
 url = "2.2"
 uuid = { version = "1.17", features = ["v4"] }
+wasm-bindgen-futures = "0.4"
 zerofrom = "0.1.5"
 zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
 
