--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -37,6 +37,7 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 getrandom.workspace = true
 tokio = { workspace = true, features = ["macros", "rt", "time"] }
 gloo-timers = { workspace = true, features = ["futures"] }
+wasm-bindgen-futures.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
