--- a/sdk/core/azure_core_macros/Cargo.toml
+++ b/sdk/core/azure_core_macros/Cargo.toml
@@ -20,6 +20,7 @@ proc-macro = true
 proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
+typespec_client_core.workspace = true
 
 [dev-dependencies]
 azure_core.workspace = true
