--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -20,6 +20,7 @@ pin-project.workspace = true
 quick-xml = { workspace = true, optional = true }
 rand.workspace = true
 reqwest = { workspace = true, optional = true }
+rust_decimal = "1.37.2"
 serde.workspace = true
 serde_json.workspace = true
 time.workspace = true
