--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -38,6 +38,7 @@ typespec_client_core = { workspace = true, features = [
 rustc_version.workspace = true
 
 [dev-dependencies]
+azure_core_macros.path = "../azure_core_macros"
 azure_core_test.workspace = true
 azure_identity.workspace = true
 azure_security_keyvault_certificates.path = "../../keyvault/azure_security_keyvault_certificates"
