Make native-tls dependency optional for azure_messaging_eventhubs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,7 @@ cargo_metadata = "0.18.1"
 clap = { version = "4.4.16", features = ["derive"] }
 criterion = { version = "0.5", features = ["async_tokio"] }
 dyn-clone = "1.0"
-fe2o3-amqp = { version = "0.14", features = ["native-tls", "tracing", "uuid"] }
+fe2o3-amqp = { version = "0.14", features = ["tracing", "uuid"] }
 fe2o3-amqp-ext = { version = "0.14" }
 fe2o3-amqp-management = { version = "0.14", features = ["tracing"] }
 fe2o3-amqp-cbs = { version = "0.14" }
