--- a/sdk/core/azure_core_amqp/Cargo.toml
+++ b/sdk/core/azure_core_amqp/Cargo.toml
@@ -49,6 +49,8 @@ fe2o3_amqp = [
   "serde_amqp",
   "serde_bytes",
 ]
+native_tls = ["fe2o3-amqp?/native-tls"]
+rustls = ["fe2o3-amqp?/rustls"]
 
 [lints]
 workspace = true
