PR feedback part 1 - does not pass tests currently

--- a/sdk/core/azure_core_macros/Cargo.toml
+++ b/sdk/core/azure_core_macros/Cargo.toml
@@ -21,6 +21,8 @@ proc-macro2.workspace = true
 quote.workspace = true
 syn.workspace = true
 typespec_client_core = { workspace = true, features = ["http", "json"] }
+tracing.workspace = true
 
 [dev-dependencies]
 tokio.workspace = true
+tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
