--- a/sdk/identity/ci.yml
+++ b/sdk/identity/ci.yml
@@ -1,4 +1,5 @@
 # NOTE: Please refer to https://aka.ms/azsdk/engsys/ci-yaml before editing this file.
+# cSpell:disable
 trigger:
   branches:
     include:
@@ -18,6 +19,7 @@ extends:
         safeName: AzureIdentity
 
     ${{ if endsWith(variables['Build.DefinitionName'], 'weekly') }}:
+      Location: uksouth
       RunLiveTests: true
       PersistOidcToken: true
       MatrixConfigs:
