Add feature to use reqwest with rustls/webpki-roots

--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -61,7 +61,9 @@ hmac_rust = ["dep:sha2", "dep:hmac"]
 reqwest = ["typespec_client_core/reqwest"]
 reqwest_deflate = ["typespec_client_core/reqwest_deflate"]
 reqwest_gzip = ["typespec_client_core/reqwest_gzip"]
-reqwest_rustls = ["typespec_client_core/reqwest_rustls"]
+reqwest_rustls = ["reqwest_rustls_native_roots"]
+reqwest_rustls_native_roots = ["typespec_client_core/reqwest_rustls_native_roots"]
+reqwest_rustls_webpki_roots = ["typespec_client_core/reqwest_rustls_webpki_roots"]
 test = ["typespec_client_core/test"]
 tokio = ["dep:tokio", "typespec_client_core/tokio"]
 xml = ["typespec_client_core/xml"]
