More test fixes

--- a/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
+++ b/sdk/keyvault/azure_security_keyvault_certificates/Cargo.toml
@@ -16,9 +16,7 @@ categories = ["api-bindings"]
 [dependencies]
 async-trait = { workspace = true }
 azure_core = { workspace = true, features = [
-  "reqwest",
-  "reqwest_deflate",
-  "reqwest_gzip",
+  "default",
 ] }
 futures = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
