--- a/sdk/storage/azure_storage_blob/Cargo.toml
+++ b/sdk/storage/azure_storage_blob/Cargo.toml
@@ -17,7 +17,7 @@ categories = ["api-bindings"]
 
 [dependencies]
 async-trait.workspace = true
-azure_core = { workspace = true, features = ["xml"] }
+azure_core = { workspace = true, features = ["default", "xml"] }
 serde.workspace = true
 typespec_client_core = { workspace = true, features = ["derive"] }
 url.workspace = true
