--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -45,6 +45,9 @@ tokio = { workspace = true, features = ["fs"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
 typespec_macros.path = "../typespec_macros"
+wasm-bindgen-test = "0.3"
+getrandom = { version = "0.3" , features = ["wasm_js"]}
+uuid = { version = "1", features = ["v4", "js"] }
 
 [features]
 default = ["http", "json", "reqwest", "reqwest_deflate", "reqwest_gzip"]
