--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -65,6 +65,12 @@
 # PRLabel: %Cosmos
 /sdk/cosmos/             @analogrelay @Pilchie @kirankumarkolli @tvaron3 @FabianMeiswinkel @kundadebdatta @nehrao1 @kushagraThapar
 
+# AzureSDKOwners: @Azure/azure-sdk-write-keyvault
+# ServiceOwner: @Azure/azure-sdk-write-keyvault
+# ServiceLabel: %KeyVault
+# PRLabel: %KeyVault
+/sdk/keyvault/           @Azure/azure-sdk-write-keyvault
+
 ###########
 # Eng Sys
 ###########
