Initial stub implementation of checkpoint store

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
   "sdk/cosmos/azure_data_cosmos",
   "sdk/identity/azure_identity",
   "sdk/eventhubs/azure_messaging_eventhubs",
+  "sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob",
   "sdk/keyvault/azure_security_keyvault_certificates",
   "sdk/keyvault/azure_security_keyvault_keys",
   "sdk/keyvault/azure_security_keyvault_secrets",
@@ -62,6 +63,14 @@ path = "sdk/core/azure_core_opentelemetry"
 version = "0.6.0"
 path = "sdk/core/azure_core_amqp"
 
+[workspace.dependencies.azure_messaging_eventhubs]
+version = "0.6.0"
+path = "sdk/eventhubs/azure_messaging_eventhubs"
+
+[workspace.dependencies.azure_messaging_eventhubs_checkpointstore_blob]
+version = "0.1.0"
+path = "sdk/eventhubs/azure_messaging_eventhubs_checkpointstore_blob"
+
 [workspace.dependencies.azure_core_test]
 # azure_core_test is not published and only ever a dev-dependency
 path = "sdk/core/azure_core_test"
@@ -73,6 +82,10 @@ path = "sdk/core/azure_core_test_macros"
 [workspace.dependencies.azure_identity]
 # azure_identity should only ever be in dev-dependencies herein
 path = "sdk/identity/azure_identity"
+
+[workspace.dependencies.azure_storage_blob]
+# azure_storage_blob should only ever be in dev-dependencies herein
+path = "sdk/storage/azure_storage_blob"
 
 [workspace.dependencies]
 async-lock = "3.0"
