Added distributed tracing to ci.yml; removed noise from opentelemetry readme file.

--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -17,5 +17,9 @@ extends:
     Artifacts:
     - name: azure_core
       safeName: AzureCore
+    - name: azure_core_macros
+      safeName: AzureCoreMacros
     - name: azure_core_amqp
       safeName: AzureCoreAmqp
+    - name: azure_core_opentelemetry
+      safeName: AzureCoreOpentelemetry
