--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,9 @@ hmac = { version = "0.12" }
 litemap = "0.7.4"
 log = "0.4"
 openssl = { version = "0.10.72" }
+opentelemetry = { version = "0.30", features = ["trace"] }
+opentelemetry_sdk = "0.30"
+opentelemetry-http = "0.30"
 pin-project = "1.0"
 proc-macro2 = "1.0.86"
 quick-xml = { version = "0.31", features = ["serialize", "serde-types"] }
