--- a/sdk/core/azure_core_opentelemetry/Cargo.toml
+++ b/sdk/core/azure_core_opentelemetry/Cargo.toml
@@ -16,9 +16,9 @@ edition.workspace = true
 
 [dependencies]
 azure_core.workspace = true
-opentelemetry = { version = "0.30", features = ["trace"] }
-opentelemetry-http = "0.30.0"
-opentelemetry_sdk = "0.30"
+opentelemetry.workspace = true
+opentelemetry-http.workspace = true
+opentelemetry_sdk.workspace = true
 reqwest.workspace = true
 tracing.workspace = true
 typespec_client_core.workspace = true
