Fix clippy 1.90 lint
After update to `+nightly` clippy 0.1.90 (7d82b83ed5 2025-08-06) we discovered a few more lints.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -147,6 +147,7 @@ zerofrom = "0.1.5"
 zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
 
 [workspace.lints.clippy]
+infallible_try_from = "allow"
 large_futures = "deny"
 uninlined_format_args = "allow"
 
