--- a/deny.toml
+++ b/deny.toml
@@ -4,27 +4,25 @@ exclude-dev = true
 
 [advisories]
 git-fetch-with-cli = true
-ignore = [
-    { id = "RUSTSEC-2024-0384", reason = "We're tracking https://github.com/minghuaw/fe2o3-amqp/issues/306" },
-]
+ignore = []
 
 [licenses]
 allow = [
-    "Apache-2.0",
-    "BSD-3-Clause",
-    "BSL-1.0",
-    "ISC",
-    "MIT",
-    # "OpenSSL",
-    "Unicode-3.0",
-    "Zlib",
+  "Apache-2.0",
+  "BSD-3-Clause",
+  "BSL-1.0",
+  "ISC",
+  "MIT",
+  # "OpenSSL",
+  "Unicode-3.0",
+  "Zlib",
 ]
 
 [[licenses.clarify]]
 name = "ring"
 expression = "MIT AND ISC AND OpenSSL"
 license-files = [
-    { path = "LICENSE", hash = 0xbd0eed23 },
+  { path = "LICENSE", hash = 0xbd0eed23 },
 ]
 
 [bans]
@@ -32,8 +30,8 @@ multiple-versions = "allow"
 wildcards = "deny"
 allow-wildcard-paths = true
 deny = [
-    "ring",
-    "smol",
+  "ring",
+  "smol",
 ]
 
 [sources]
