cosmos: add experimental c wrapper around cosmos sdk

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ members = [
   "sdk/storage/azure_storage_common",
   "sdk/storage/azure_storage_blob",
   "sdk/storage/azure_storage_queue",
+  "sdk/cosmos/cosmosclient",
 ]
 exclude = [
   "eng/scripts",
