--- a/sdk/cosmos/azure_data_cosmos/Cargo.toml
+++ b/sdk/cosmos/azure_data_cosmos/Cargo.toml
@@ -37,11 +37,16 @@ workspace = true
 
 [features]
 default = ["hmac_rust"]
-_internal_c = [] # Internal feature used to expose additional types/functions as needed to build libcosmosclient.
+c = [] # Internal feature used to expose additional types/functions as needed to build libcosmosclient.
 key_auth = [] # Enables support for key-based authentication (Primary Keys and Resource Tokens)
 preview_query_engine = ["serde_json/raw_value"] # Enables support for the PREVIEW external query engine
 hmac_rust = ["azure_core/hmac_rust"]
 hmac_openssl = ["azure_core/hmac_openssl"]
 
 [package.metadata.docs.rs]
-features = ["key_auth"]
+features = [
+  "key_auth",
+  "preview_query_engine",
+  "hmac_rust",
+  "hmac_openssl",
+]
