--- a/sdk/eventhubs/azure_messaging_eventhubs/Cargo.toml
+++ b/sdk/eventhubs/azure_messaging_eventhubs/Cargo.toml
@@ -38,6 +38,7 @@ azure_messaging_eventhubs = { path = ".", features = [
   "in_memory_checkpoint_store",
 ] }
 criterion.workspace = true
+fe2o3-amqp = { workspace = true, features = ["tracing"] }
 tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
 tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
 
