Rebase and fix up

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,6 +145,7 @@ tracing-subscriber = "0.3"
 url = "2.2"
 uuid = { version = "1.18", features = ["v4"] }
 wasm-bindgen-futures = "0.4"
+wasm-bindgen-test = "0.3"
 zerofrom = "0.1.5"
 zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
 
