Update docs and tests
If we only test wasm_bindgen, some json tests were failing. Also updates CHANGELOG.

--- a/sdk/typespec/typespec_client_core/Cargo.toml
+++ b/sdk/typespec/typespec_client_core/Cargo.toml
@@ -16,6 +16,7 @@ base64.workspace = true
 bytes.workspace = true
 dyn-clone.workspace = true
 futures.workspace = true
+gloo-timers = { workspace = true, optional = true }
 pin-project.workspace = true
 quick-xml = { workspace = true, optional = true }
 rand.workspace = true
@@ -37,11 +38,9 @@ tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 getrandom.workspace = true
-gloo-timers = { workspace = true, optional = true }
 tokio = { workspace = true, features = ["macros", "rt", "time"] }
 
 [dev-dependencies]
-tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 typespec_macros.path = "../typespec_macros"
@@ -50,6 +49,7 @@ typespec_macros.path = "../typespec_macros"
 tokio = { workspace = true, features = ["fs"] }
 
 [target.'cfg(target_family = "wasm")'.dev-dependencies]
+tokio.workspace = true
 getrandom = { workspace = true, features = ["wasm_js"] }
 uuid = { workspace = true, features = ["v4", "js"] }
 wasm-bindgen-test.workspace = true
@@ -73,6 +73,10 @@ wasm_bindgen = ["dep:wasm-bindgen-futures", "gloo-timers/futures"]
 xml = ["dep:quick-xml"]
 
 [[example]]
+name = "core_binary_data_request"
+required-features = ["tokio"]
+
+[[example]]
 name = "core_stream_response"
 required-features = ["derive"]
 
@@ -87,6 +91,7 @@ features = [
   "reqwest_gzip",
   "reqwest_rustls",
   "tokio",
+  "wasm_bindgen",
   "xml",
 ]
 
