re-enable HTTP connection pooling

--- a/sdk/core/azure_core/Cargo.toml
+++ b/sdk/core/azure_core/Cargo.toml
@@ -44,6 +44,7 @@ azure_identity.workspace = true
 azure_security_keyvault_certificates.path = "../../keyvault/azure_security_keyvault_certificates"
 azure_security_keyvault_secrets.path = "../../keyvault/azure_security_keyvault_secrets"
 criterion.workspace = true
+reqwest.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing-subscriber.workspace = true
@@ -86,4 +87,8 @@ features = [
 
 [[bench]]
 name = "benchmarks"
+harness = false
+
+[[bench]]
+name = "http_transport_benchmarks"
 harness = false
